# apispec-pydantic-plugin

./: .gitignore  README.md  poetry-update-helper.py  publish.sh  pyproject.toml  setup.cfg
.github/workflows/: main.yml
src/apispec_pydantic_plugin/: __init__.py  constants.py  errors.py  models.py  pydantic_plugin.py  registry.py  resolver.py
tests/: test_models.py
