[tool.poetry]
name = "apispec-pydantic-plugin"
version = "0.4.0"
description = ""
authors = ["Kevin Kirsche <kevin.kirsche@one.verizon.com>"]
readme = "README.md"
packages = [{ include = "apispec_pydantic_plugin", from = "src" }]
include = ["src/apispec_pydantic_plugin/py.typed"]

[tool.poetry.dependencies]
python = ">=3.10,<4"
apispec = ">=6.3.0,<7"
pydantic = ">=2.3.0,<3"

[tool.poetry.group.dev.dependencies]
black = { extras = ["toml"], version = "^23.7.0" }
codespell = "^2.2.5"
example-isort-formatting-plugin = "^0.1.1"
example-isort-sorting-plugin = "^0.1.0"
isort = "^5.12.0"
mypy = "^1.5.0"
pytest = "^7.4.0"
ruff = "^0.0.284"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
formatter = "example"
profile = "black"
remove_redundant_aliases = true
sort_order = "natural_plus"
py_version = 311

[tool.bandit]
exclude = ["/tests"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --strict-config"
markers = []
minversion = "7.1"
testpaths = ["tests"]

[tool.pylint."MESSAGES CONTROL"]
disable = "C0330, C0326"
max_line_length = 88

[tool.black]
include = '\.pyi?$'
line-length = 88
target-version = ['py310']

[tool.mypy]
files = ["."]
follow_imports = "normal"
plugins = ["pydantic.mypy"]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = []

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.ruff]
# https://beta.ruff.rs/docs/settings/#select
# https://beta.ruff.rs/docs/rules/ defines what the select codes mean
select = [
    "ARG",   # flake8-unused-arguments
    "ASYNC", # flake8-async
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "C90",   # mccabe
    "DTZ",   # flake8-datetimez
    "E",     # pycodestyle (errors)
    "F",     # Pyflakes
    "PIE",   # flake8-pie
    "PTH",   # flake8-use-pathlibdd
    "PYI",   # flake8-pyi
    "Q",     # flake8-quotes
    "S",     # flake8-bandit
    "UP",    # pyupgrade
    "W",     # pycodestyle (warnings)
    "YTT",   #  flake8-2020
]
target-version = "py310"
line-length = 88
extend-exclude = ["tests", "test_api_rbac.py"]

[tool.ruff.mccabe]
max-complexity = 15

[tool.ruff.per-file-ignores]
"src/hades/controllers/v1/firewall/metrics.py" = ["E501"]
"src/hades/views/redoc.py" = ["E501"]
