[tool.poetry]
name = "apispec-pydantic-plugin"
version = "0.5.1"
description = ""
authors = ["Kevin Kirsche <kevin.kirsche@one.verizon.com>"]
readme = "README.md"
packages = [{ include = "apispec_pydantic_plugin", from = "src" }]
include = ["src/apispec_pydantic_plugin/py.typed"]

[tool.poetry.dependencies]
python = ">=3.10,<4"
apispec = ">=6.3.0,<7"
pydantic = ">=2.3.0,<3"

[tool.poetry.group.dev.dependencies]
codespell = "^2.2.6"
mypy = "^1.9.0"
pytest = "^8.1.1"
ruff = "^0.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.bandit]
exclude = ["/tests"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --strict-config"
markers = []
minversion = "7.1"
testpaths = ["tests"]

[tool.pylint."MESSAGES CONTROL"]
disable = "C0330, C0326"
max_line_length = 88

[tool.mypy]
files = ["."]
follow_imports = "normal"
local_partial_types = true
plugins = ["pydantic.mypy"]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = []

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.ruff]
target-version = "py310"
line-length = 88
fix = true
preview = true
extend-exclude = []

[tool.ruff.lint]
# https://beta.ruff.rs/docs/settings/#select
# https://beta.ruff.rs/docs/rules/ defines what the select codes mean
select = [
    "A",
    "ARG",
    "ASYNC",
    "B",
    "BLE",
    "C4",
    "C90",
    "DTZ",
    "E",
    "EXE",
    "F",
    "FA",
    "FBT",
    "FIX",
    "FLY",
    "FURB",
    "G",
    "I",
    "ICN",
    "INP",
    "INT",
    "ISC",
    "LOG",
    "N",
    "PERF",
    "PGH",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "PYI",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "SLF",
    "SLOT",
    "T10",
    "T20",
    "TCH",
    "TD",
    "TID",
    "TRY",
    "UP",
    "W",
    "YTT",
]
extend-ignore = [
    "TRY003",  # Avoid specifying long messages outside the exception class
    "PLR0913", # Too many arguments to function call (n > 5)
    "ISC001",  # doesn't work well with ruff formatter
]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
"poetry-update-helper.py" = ["T201", "S404"]
"tests/**/*.py" = ["S101"]

[tool.ruff.format]
# Use Unix-style line endings.
line-ending = "lf"
docstring-code-format = true
